NO_ISSUE, code cleanups